--- a/src/components/GuideBook/GuideBook.css
+++ b/src/components/GuideBook/GuideBook.css
@@ -18,8 +18,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  transition: all 0.2s;
+  transition: color 0.2s ease-in-out;
   margin-bottom: 26px;
+}
+
+.guidebook-wrapper .nav-item:hover {
+  color: #5f65ff;
 }
 
 .guidebook-wrapper .nav-item .icon {
@@ -51,7 +55,7 @@
 }
 
 .guidebook-wrapper .sidebar-submenu.active ul li {
-  margin-bottom: 30px;
+  margin-bottom: 26px;
 }
 
 .guidebook-wrapper .sidebar-submenu.active ul li button {
@@ -60,8 +64,9 @@
   display: inline-block;
   border: none;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 17px;
   font-family: 'CircularStd-Medium', Helvetica, sans-serif;
+  transition: color 0.2s ease-in-out;
 }
 
 .guidebook-wrapper .guidebook-section {
@@ -76,10 +81,30 @@
 .guidebook-section-description {
   margin: 0;
   margin-bottom: 22px;
+  line-height: 24px;
 }
 
 .guidebook-wrapper .guidebook-section ol {
   margin-top: 0;
+}
+
+.guidebook-description-section {
+  margin-bottom: 20px;
+}
+
+.guidebook-description-bold {
+  font-family: 'CircularStd-bold', Helvetica, sans-serif;
+}
+
+.guidebook-separate-line {
+  margin-bottom: 16px;
+  padding-left: 0;
+  margin-left: -14px;
+}
+
+.guidebook-separate-line.sub-heading {
+  font-family: 'CircularStd-bold', Helvetica, sans-serif;
+  font-size: 18px;
 }
 
 .guidebook-section-description li {
