--- a/src/components/ValidatingFormInput/ValidatingFormInput.css
+++ b/src/components/ValidatingFormInput/ValidatingFormInput.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  font-family: 'CircularStd-book';
+  font-family: 'CircularStd-book', Helvetica, sans-serif;
 }
 
 .validating_form_input label {
@@ -41,10 +41,10 @@
   line-height: 16px;
   color: #222222;
   padding: 11px;
-  border-radius: 5px;
+  border-radius: 8px;
   display: block;
   flex: 1;
-  font-family: 'CircularStd-book';
+  font-family: 'CircularStd-book', Helvetica, sans-serif;
   height: 16px;
 }
 
