--- a/src/components/MultiEditBar/MultiEditBar.css
+++ b/src/components/MultiEditBar/MultiEditBar.css
@@ -44,6 +44,6 @@
   top: unset;
 }
 
-.archive-popup.alert-popup-wrapper .alert-popup-header .inner-icon {
+/* .archive-popup.alert-popup-wrapper .alert-popup-header .inner-icon {
   background-color: #ff5d36;
-}
+} */
