--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -57,7 +57,7 @@
 .expanded_view_description {
   border: 1px solid #f2f2f2;
   border-radius: 15px;
-  padding: 15px;
+  padding: 12px 10px 8px 14px;
   color: #a3a3a3;
   margin-bottom: 20px;
 }
