add Report Issue button

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,9 @@
+.bottom-left-panel {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+}
+
 .bottom-right-panel {
   position: fixed;
   bottom: 10px;
