--- a/src/components/ProfileEditForm/ProfileEditForm.css
+++ b/src/components/ProfileEditForm/ProfileEditForm.css
@@ -68,6 +68,13 @@
 }
 
 @media only screen and (max-height: 800px) {
+  .profile_edit_form {
+    width: 510px;
+    padding: 40px 40px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
   .validating_form_input {
     margin-bottom: 30px;
   }
