--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -2,9 +2,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -378px;
-  margin-left: -317px;
-  background: #FFFFFF;
+  transform: translate(-50%, -50%);
+  background: #ffffff;
   box-shadow: 0px 0px 6px #00000041;
   border-radius: 10px;
 }
