--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,24 +1,33 @@
-.alert-popup {
+.modal {
   top: 0;
   left: 0;
   background: rgba(31, 31, 31, 0.4);
   width: 100vw;
   height: 100vh;
   position: fixed;
-  z-index: 1;
+  z-index: -1;
+  opacity: 0;
   transition: 0.2s all;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.alert-popup-wrapper {
+.modal.modal-white {
+  background: rgba(255, 255, 255, 0.7);
+}
+
+.modal.active {
+  opacity: 1;
+  z-index: 200;
+}
+
+.modal-wrapper {
   position: absolute;
   width: 634px;
   min-height: 345px;
   box-sizing: border-box;
   padding: 50px 60px;
-  transition: 0.3s;
   background-color: #ffff;
   border-radius: 10px;
   box-shadow: 0px 0px 6px #00000041;
@@ -28,31 +37,31 @@
   transition: 0.2s all;
 }
 
-.alert-popup-wrapper .small-close {
+.modal-wrapper .small-close {
   position: absolute;
   top: 30px;
   right: 30px;
   cursor: pointer;
 }
 
-.alert-popup-header {
+.modal-header {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.alert-popup-heading {
+.modal-heading {
   font-size: 22px;
   font-family: 'gilroyextrabold', Helvetica, sans-serif;
   font-weight: normal;
 }
 
-.popup-icon {
+.modal-icon {
   margin-right: 10px;
   cursor: default;
 }
 
-.popup-content {
+.modal-content {
   color: #4d4d4d;
 }
 
@@ -77,7 +86,7 @@
   margin-right: 20px;
 }
 
-.alert-popup-goals-list {
+.modal-goals-list {
   max-height: 100px;
   overflow-y: scroll;
   overflow-x: hidden;
