dashboard modals and projects

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -271,9 +271,9 @@ button.green .icon {
   background-color: #00d0c0;
 }
 
-button.purple .icon {
+/* button.purple .icon {
   background-color: #5f65ff;
-}
+} */
 
 button.yellow .icon {
   background-color: #ffc400;
