--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -66,6 +66,13 @@
   cursor: pointer;
 }
 
+.icon.very-small-close {
+  width: 14px;
+  height: 14px;
+  padding: 3px;
+  cursor: pointer;
+}
+
 .icon.medium {
   width: 32px;
   height: 32px;
@@ -88,17 +95,6 @@
   cursor: pointer;
 }
 
-.icon.logo {
-  width: 28px;
-  height: 18px;
-  padding: 1.25px;
-  display: inline-block;
-  position: relative;
-  right: -2px;
-  background: transparent;
-  cursor: default;
-}
-
 .icon.view-mode-small {
   height: 24px;
   width: 24px;
@@ -108,28 +104,6 @@
   margin-top: 2;
   margin-left: 0;
   box-sizing: border-box;
-}
-
-.icon.view-mode {
-  height: 24px;
-  width: 24px;
-  padding: 2px;
-  display: inline-block;
-  position: relative;
-  margin-top: 0;
-  margin-left: 0;
-  box-sizing: border-box;
-}
-
-.icon.header {
-  height: 24px;
-  width: 24px;
-  padding: 1px;
-  display: inline-block;
-  position: relative;
-  margin-top: 0;
-  margin-right: 20px;
-  margin-left: 0;
 }
 
 .icon.user-status {
@@ -200,4 +174,5 @@
 
 .icon-tooltip.top {
   bottom: 30px;
+  z-index: 9999;
 }
