--- a/src/components/ExpandedViewMode/ExpandedViewMode.css
+++ b/src/components/ExpandedViewMode/ExpandedViewMode.css
@@ -6,15 +6,21 @@
   padding: 0;
   overflow-y: hidden;
   position: fixed;
-  opacity: 0;
-  visibility: hidden;
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
 
-.expanded-view-overlay.fully-expanded {
+.expanded-view-overlay-enter {
+  opacity: 0;
+}
+.expanded-view-overlay-enter-active {
   opacity: 1;
-  visibility: visible;
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+  transition: opacity 0.25s 0s, transform 0.25s;
+}
+.expanded-view-overlay-exit {
+  opacity: 1;
+  transition: opacity 0.25s 0s, transform 0.25s;
+}
+.expanded-view-overlay-exit-active {
+  opacity: 0;
 }
 
 .expanded-view-wrapper {
@@ -29,19 +35,33 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.expanded-view-wrapper-enter {
   -ms-transform: translate(-50%, -50%) scale(0.9);
   transform: translate(-50%, -50%) scale(0.9);
   opacity: 0;
-  visibility: hidden;
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
-
-.expanded-view-wrapper.fully-expanded {
+.expanded-view-wrapper-enter-active {
   -ms-transform: translate(-50%, -50%) scale(1);
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
-  visibility: visible;
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+  transition: opacity 0.25s 0s, transform 0.25s;
+}
+
+.expanded-view-wrapper-exit {
+  -ms-transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+
+.expanded-view-wrapper-exit-active {
+  -ms-transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.9);
+  opacity: 0;
+  transition: opacity 0.25s 0s, transform 0.25s;
 }
 
 .expanded-view-wrapper .small-close {
