--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -118,6 +118,42 @@
   margin-right: 10px;
 }
 
+/* Export */
+
+.export-wrapper {
+  position: relative;
+  height: 24px;
+}
+
+.export-list-wrapper {
+  position: absolute;
+  border-radius: 14px;
+  background-color: #ffffff;
+  padding: 12px 0;
+  box-shadow: 0px 0px 6px #00000029;
+  list-style: none;
+}
+
+.export-list-wrapper a {
+  padding: 12px 25px;
+  color: black;
+  outline: none;
+  font-family: 'CircularStd-Book', Helvetica, sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  background: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  align-items: center;
+  display: block;
+  white-space: nowrap;
+}
+.export-list-wrapper a:hover {
+  background: #f4f4f4 none repeat scroll 0% 0%;
+  color: #5f65ff;
+}
+
 /* Current Entry Points Tab */
 
 .current-entry-point {
@@ -382,57 +418,6 @@ button.gray .icon {
 }
 
 .user-status-wrapper button:hover {
-  background: #f4f4f4 none repeat scroll 0% 0%;
-  color: #5f65ff;
-}
-
-/* Export */
-
-.export-wrapper {
-  margin-top: 62px;
-  margin-left: 265px;
-  float: left;
-  border-radius: 14px;
-  background-color: #ffffff;
-  padding: 12px 0;
-  box-shadow: 0px 0px 6px #00000029;
-  display: flex;
-  flex-direction: column;
-}
-
-.export-wrapper a {
-  padding: 12px 25px;
-  color: black;
-  outline: none;
-  font-family: 'CircularStd-Book', Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: 14px;
-  background: none;
-  border: none;
-  text-decoration: none;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-}
-
-.export-hover-display {
-  margin-top: 60px;
-  margin-left: 321px;
-  float: left;
-  border-radius: 5px;
-  color: white;
-  background-color: #5f65ff;
-  padding: 3px 6px 6px 6px;
-  box-shadow: 0px 0px 6px #00000029;
-  display: flex;
-  flex-direction: column;
-  font-family: 'quebecsemibold', Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: 10px;
-  z-index: 100;
-}
-
-.export-wrapper a:hover {
   background: #f4f4f4 none repeat scroll 0% 0%;
   color: #5f65ff;
 }
