--- a/src/routes/Dashboard/DashboardListProject.css
+++ b/src/routes/Dashboard/DashboardListProject.css
@@ -4,6 +4,7 @@
   border-bottom: 2px solid #ebebeb;
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-right: 10px;
 }
 
 .dashboard-list-project {
