wire in real entry points in entry point lists

--- a/src/components/EntryPointPicker/EntryPointPicker.css
+++ b/src/components/EntryPointPicker/EntryPointPicker.css
@@ -72,6 +72,9 @@
 /* Entry Point Picker List */
 
 .entry-point-picker-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .entry-point-picker-item {
