add colors to EntryPoints

--- a/src/routes/Dashboard/DashboardListProject.css
+++ b/src/routes/Dashboard/DashboardListProject.css
@@ -105,11 +105,10 @@
   margin-left: 23px;
 }
 
-.entry-point-icon {
+.entry-point-color-dot {
   width: 18px;
   height: 18px;
   border-radius: 50%;
-  background: #ebebeb;
   margin-right: 12px;
 }
 
