--- a/src/routes/Dashboard/DashboardListProject.css
+++ b/src/routes/Dashboard/DashboardListProject.css
@@ -13,6 +13,11 @@
 }
 
 .dashboard-list-project-image {
+  text-decoration: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  line-height: 68px;
 }
 
 .dashboard-list-project-image-bg {
