--- a/src/components/EntryPointPicker/EntryPointPicker.css
+++ b/src/components/EntryPointPicker/EntryPointPicker.css
@@ -11,6 +11,8 @@
   box-sizing: border-box;
   width: 360px;
   height: 360px;
+  display: flex;
+  flex-direction: column;
 }
 
 .entry-point-picker-wrapper-enter {
@@ -75,6 +77,8 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  flex: 1;
+  overflow-y: scroll;
 }
 
 .entry-point-picker-item {
