--- a/src/components/Preferences/Preferences.css
+++ b/src/components/Preferences/Preferences.css
@@ -4,11 +4,25 @@
   color: #4d4d4d;
   font-family: 'gilroyextrabold', 'CircularStd-Bold', Helvetica, sans-serif;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .preferences-section {
   padding: 20px 0;
   border-bottom: 1px solid #e3e3e3;
+}
+
+.preferences-section-title-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.preferences-section-title-wrapper .icon {
+  height: 16px;
+  cursor: unset;
+  padding: 0;
 }
 
 .preferences-section-title {
@@ -18,22 +32,25 @@
   color: #222222;
   display: flex;
   flex-direction: row;
+  margin-left: 8px;
 }
 
 .preferences-section-subtitle {
   font-size: 14px;
   line-height: 18px;
   color: #b7b7b7;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  margin-left: 24px;
 }
 
 .navigation-mode-options-wrapper {
   display: flex;
   flex-direction: row;
+  padding: 0 68px;
+  margin-bottom: 40px;
 }
 
 .navigation-mode-option {
-  padding: 40px;
   font-size: 18px;
   line-height: 22px;
   font-family: 'CircularStd-Medium', Helvetica, sans-serif;
@@ -43,12 +60,43 @@
   border-radius: 10px;
   width: 150px;
   height: 120px;
-  vertical-align: middle;
-  margin-bottom: 60px;
+  margin: 0 auto;
+  display: block;
+  cursor: pointer;
+  transition: border 0.2s ease-in-out;
 }
 
-.navigation-mode-option .icon {
+.navigation-mode-option:hover {
+  border: 1px solid #6d0ef7;
+  box-shadow: 0px 3px 6px #00000016;
+}
+
+.navigation-mode-option-content {
+  width: 150px;
+  height: 120px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.navigation-mode-option-content .icon {
   margin: 0 auto;
+  cursor: pointer;
+}
+
+.navigation-mode-option-icon-trackpad .icon {
+  height: 49px;
+  width: 47px;
+  margin-bottom: -8px;
+}
+
+.navigation-mode-option-icon-mouse .icon {
+  height: 45px;
+  width: 40px;
+  margin-bottom: -5px;
+}
+
+.navigation-mode-option-text {
+  margin-top: 14px;
 }
 
 .navigation-mode-description-wrapper {
@@ -59,6 +107,14 @@
 .navigation-mode-description-title-wrapper {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.navigation-mode-description-title-wrapper .icon {
+  height: 12px;
+  cursor: unset;
+  padding: 0;
 }
 
 .navigation-mode-description-title {
@@ -66,11 +122,17 @@
   line-height: 20px;
   font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   color: #222222;
+  margin-left: 10px;
 }
 
 .navigation-mode-description-text {
   font-size: 14px;
   line-height: 18px;
-  font-family: 'CircularStd-Regular', Helvetica, sans-serif;
   color: #3b3b3b;
+  margin-left: 26px;
+}
+
+.preferences-save-button {
+  text-align: center;
+  margin-top: 40px;
 }
