--- a/src/components/ErrorScreen/ErrorScreen.css
+++ b/src/components/ErrorScreen/ErrorScreen.css
@@ -9,6 +9,7 @@
   overflow: hidden;
   margin: auto auto;
   width: 900px;
+  height: 436px;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -85,9 +86,13 @@
   transition: ease-in-out 0.2s;
   box-sizing: border-box;
   font-family: monospace;
+  white-space: pre;
+  overflow: scroll;
+  width: 480px;
+  resize: none;
 }
 
-.show-stack-field-palceholder {
+.show-stack-field-placeholder {
   height: 100px;
   transition: ease-in-out 0.2s;
 }
@@ -105,5 +110,4 @@
 .error-screen-column-right img {
   padding: 40px;
   width: 240px;
-  margin-top: 100px;
 }
